# OpcUaModbusGateway

./: .gitignore  .gitmodules  Dockerfile  README.md  README.rst  start.bat
doc/: build.sh
doc/Manual_OpcUaModbusGateway/: conf.py  history.rst  index.rst
doc/Manual_OpcUaModbusGateway/installation/: index.rst
doc/Manual_OpcUaModbusGateway/operation_instructions/: index.rst
doc/Manual_OpcUaModbusGateway/overview/: index.rst
docs/source/: conf.py  glossary.rst  index.rst
docs/source/1_getting_started/: installation.rst  overview.rst
src/: CMakeLists.txt
src/OpcUaModbusGateway/: CMakeLists.txt
src/OpcUaModbusGateway/Application/: LogDefault.cpp  LogDefault.h  ModbusServerModel.cpp  ModbusServerModel.h  ModbusTCPClient.cpp  ModbusTCPClient.h  ModbusTCPClientImpl.cpp  ModbusTCPClientImpl.h  ModbusTCPServer.cpp  ModbusTCPServer.h  ModbusTCPServerImpl.cpp  ModbusTCPServerImpl.h
src/OpcUaModbusGateway/Config/: Opc.Ua.NodeSet.ModbusGateway.xml  OpcUaModbusGateway.xml  OpcUaServer.xml  TestNodeSet.xml  opcuamodbusgateway.xml  testnodeset1.xml
src/OpcUaModbusGateway/CustomerObjectType/: ModbusClientInterface.cpp  ModbusClientInterface.h  ModbusServerInterface.cpp  ModbusServerInterface.h  build.sh
src/OpcUaModbusGateway/CustomerVariableType/: AnalogValue.cpp  AnalogValue.h  ModbusValue.cpp  ModbusValue.h  build.sh
src/OpcUaModbusGateway/OpcUa/: OpcUaAnalogVariable.cpp  OpcUaAnalogVariable.h  OpcUaModbusClientGroup.cpp  OpcUaModbusClientGroup.h  OpcUaModbusClientInterface.cpp  OpcUaModbusClientInterface.h  OpcUaModbusClientRegister.cpp  OpcUaModbusClientRegister.h  OpcUaModbusServerGroup.cpp  OpcUaModbusServerGroup.h  OpcUaModbusServerInterface.cpp  OpcUaModbusServerInterface.h  OpcUaModbusServerRegister.cpp  OpcUaModbusServerRegister.h  OpcUaModbusValue.cpp  OpcUaModbusValue.h
src/OpcUaModbusGateway/Util/: Condition.cpp  Condition.h  ModbusGatewayConfig.cpp  ModbusGatewayConfig.h  TypeConverter.cpp  TypeConverter.h
src/OpcUaModbusGateway/linux/etc/init/: OpcUaModbusGateway.conf.in
src/OpcUaModbusGateway/linux/etc/init.d/: OpcUaModbusGateway.in
src/OpcUaModbusGateway/linux/script/: postinst  prerm
src/OpcUaModbusGateway/linux/usr/lib/systemd/system/: OpcUaModbusGateway.service.in
